--- a/index.html
+++ b/index.html
@@ -168,18 +168,57 @@
         </div>
     </div>
     <div class="other-section">
-        <div class="faq">
-            
-        </div>
+        <section class="faq">
+            <h2>Frequently Asked Questions</h2>
+            <div class="faq-item">
+                <h3 class="faq-question">What is TutoSearch?</h3>
+                <div class="faq-answer">
+                    <p>TutoSearch is an online platform that connects students with tutors for various subjects and skill levels.</p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <h3 class="faq-question">How do I find a tutor?</h3>
+                <div class="faq-answer">
+                    <p>You can find a tutor by using the search feature on our homepage, where you can filter by subject, location, and other criteria.</p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <h3 class="faq-question">Is TutoSearch free to use?</h3>
+                <div class="faq-answer">
+                    <p>Registering on TutoSearch is free. However, some tutors may charge for their services. You can view their rates on their profiles.</p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <h3 class="faq-question">How can I become a tutor?</h3>
+                <div class="faq-answer">
+                    <p>To become a tutor, you need to sign up on our platform and complete your profile. Once approved, you can start offering your tutoring services.</p>
+                </div>
+            </div>
+        </section>    
         <div class="about">
-            <div class="logo">logo</div>
-            <p>about</p>
+            <div class="f ab"><p>TutoSearch is an innovative platform dedicated to connecting students with top-notch tutors across a wide range of subjects and levels. Our mission is to make high-quality education accessible to everyone by providing a user-friendly, searchable database of experienced tutors.</p>
+            </div>
+            <div class="s ab"><p>  At TutoSearch, we believe that personalized education is key to unlocking every student’s potential. Our platform is designed to bridge the gap between students and the expert guidance they need to succeed academically and beyond. </p>
+            </div>
         </div>
     </div>
     <div class="footer">
-        <div class="links">other links</div>
-        <div class="help">help</div>
+        <div class="links">
+            <h4>Other Links</h6>
+            <a >Home</a>
+            <a >About</a>
+            <a >Support</a>
+            <a >Blog</a>
+        </div>
+        <div class="help">
+            <h4>Help</h6>
+                <p>0931719840</p>
+                <p>3957287023</p>
+                <p>bvkjbsd@gmail.com</p>
+        </div>
     </div>
+    <div class="elementor-widget-container">
+        © 2024 MyTutor. <br>Website &amp; Poster By <br><a >Sagnik Ghosal &amp; Sheehab Al Farasat &amp; Lisaan Ali</a>						</div>
     <script>(g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })
             ({ key: "AIzaSyBeeR_ecSZgWBZqDhq-cm6lblDiOpMtHeY", v: "beta" });</script>
     <script type="module" src="./index.js"></script>
