--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             <div class="space"></div>
             <p class="tag-line">Your Gateway to Expert Tutors and Educational Excellence</p>
         </div>
+        <div class="pdf">
+            <div> Want to check how this work
+            <a href="https://qr.me-qr.com/mobile/pdf/30ac3b8f-dc65-4c75-9aae-65f06f1388b2">click here</a>
+            </div>
+        </div>
         <div
             class="directorist-search-form-top directorist-flex directorist-align-center directorist-search-form-inline nav">
 
